--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
   - init: |
-      echo 'TODO: build project'
+      yarn install
     command: |
-      echo 'TODO: start app'
+      yarn dev
