--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "get_data": "node get_data.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.4",
-    "svelte": "^3.59.1",
-    "vite": "^4.3.9",
     "@iconify/svelte": "^3.1.4",
-    "node-sass": "^9.0.0"
+    "@sveltejs/vite-plugin-svelte": "^2.0.4",
+    "node-sass": "^9.0.0",
+    "sass": "^1.68.0",
+    "svelte": "^3.59.1",
+    "vite": "^4.3.9"
   }
 }
